- check URL/URI format for jira reposiories - disable validate if url/uri malformed